# Study

./: readme.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
bsdiffdemo/: CMakeLists.txt  build.gradle
bsdiffdemo/src/main/: AndroidManifest.xml
chtoolbar/: build.gradle
chtoolbar/src/main/: AndroidManifest.xml
cjssplx3/: build.gradle
cjssplx3/src/: main.rar
cjssplx3/src/main/: AndroidManifest.xml
dispatchevent/: build.gradle
dispatchevent/src/main/: AndroidManifest.xml
gifplay/: CMakeLists.txt  build.gradle
gifplay/src/androidTest/java/com/lx/gifplay/: ExampleInstrumentedTest.java
gifplay/src/main/: AndroidManifest.xml
gifplay/src/main/cpp/: gif-lib.cpp
gifplay/src/main/java/com/lx/gifplay/: GifHandler.java  MainActivity.java
gifplay/src/main/res/layout/: activity_main.xml
gifplay/src/test/java/com/lx/gifplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
hblx/: build.gradle
hblx/src/: main.rar
hblx/src/main/: AndroidManifest.xml
lslon1_1_1/: build.gradle
lslon1_1_1/src/main/: AndroidManifest.xml
mffmpeg/: build.gradle
mffmpeg/src/main/: AndroidManifest.xml
movelx2/: build.gradle
movelx2/src/: main.rar
movelx2/src/main/: AndroidManifest.xml
myplay/: CMakeLists.txt  build.gradle
myplay/src/main/: AndroidManifest.xml
pingmushipei/: build.gradle
pingmushipei/src/main/: AndroidManifest.xml
pmsplx4/: build.gradle
pmsplx4/src/: main.rar
pmsplx4/src/main/: AndroidManifest.xml
retrofitDemo/: build.gradle
zfklx5/: build.gradle
内存优化/: readme.txt
(+75 files in other folders)
